# iris-classification

./: .gitignore  pyproject.toml
app/: common.py  datarobot_predict.py  main.py  settings.py
data/: iris.csv  iris_ans.csv  iris_test.csv
notebook/: prep.ipynb
tests/: conftest.py  tests.py
