[tool.poetry]
name = "iris-classification"
version = "0.0.1"
description = ""
authors = ["S.Ura <ura.soo3635@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
ipykernel = "^6.29.2"
streamlit = "^1.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
